--- a/paper/codegen.tex
+++ b/paper/codegen.tex
@@ -1,5 +1,5 @@
 \subsection{Wrapper Generation}
-The wrappers described in section \ref{ld_preload} (and illustrated by example in listing \ref{lst:wrapper_example}) are uniformly structured: they contain one method, the signature of which is known beforehand (as it is identical to that of the overridden call). Furthermore, the only information needed about the call in question is its signature (nothing specific about its implementation is necessary for generating the wrapper). Thus, wrappers are good candidates for automatic code generation by inspection of the appropriate header files. For example, by examining the \texttt{stdlib.h} file and knowing a few pieces of information from the \texttt{MALLOC(3)} page, we can completely construct the aforementioned wrapper:
+The wrappers described in section \ref{ld_preload} (and illustrated by example in listing \ref{lst:wrapper_example}) are uniformly structured: they contain one method, the signature of which is known beforehand (as it is identical to that of the overridden call). Furthermore, nothing specific about its implementation is necessary for generating the wrapper. Thus, wrappers are good candidates for automatic code generation by inspection of the appropriate header files. For example, by examining the \texttt{stdlib.h} file and knowing a few pieces of information from the \texttt{MALLOC(3)} page, we can completely construct the aforementioned wrapper:
 
 \begin{lstlisting}[caption=Excerpt from \texttt{/usr/include/stdlib.h}, language=C]
 /* Allocate SIZE bytes of memory.  */
@@ -11,6 +11,8 @@ RETURN VALUE
 ...On error, these functions return NULL...
 \end{lstlisting}
 
-We developed an input file which contained the call name, (error) return value, \texttt{errno} (if applicable), and the header file to be included in the wrapper (usually given at the top of the \texttt{man} page). Our script parsed this input file and generated the appropriate wrappers. The script uses the \texttt{pycparser} Python module \cite{pycparser} to traverse the AST from the header file.
+We developed an input file which contained the call name, (error) return value, \texttt{errno} (if applicable), and the header file to be included in the wrapper (usually given at the top of the \texttt{man} page). Our script parsed this input file and generated the appropriate wrappers. The script uses the \texttt{pycparser} Python module \cite{pycparser} to traverse the AST derived from the header file.
 
 This technique has a number of benefits, the primary one being that it reduces development time when wanting to make small changes to all of the wrappers. For example, we may want to add a ``coin flip'' to the wrapper shown above, which simply determines at random whether to return the correct value or the error value. It is trivial to do this via code generation, by simply adding a few lines to the script and re-running it to update all of the downstream wrappers.
+
+At the outset, it was unclear whether the added development cost of this approach would outweigh the potential speedup in development time. It is true that the wrapper files were only infrequently modified, however when dealing with calls approaching 25 in number, it becomes increasingly tedious to make any number of changes in a manual way. At the very least, we hope that the lessons we have learned in exploring this approach will benefit others in the testing community.
