update coreutils section

--- a/paper/citations.bib
+++ b/paper/citations.bib
@@ -1,13 +1,12 @@
 @misc{pycparser,
-  title={\texttt{pycparser}: C parser and AST generator written in Python},
+  title={\texttt{pycparser}: C parser and {AST} generator written in Python},
   author={Bendersky, E},
   howpublished = "\url{https://github.com/eliben/pycparser}",
   year={2011},
 }
 
 @misc{coreutils,
-  title={GNU Core Utils},
-  % should author be "GNU Project"?
+  title={Coreutils - {GNU} core utilities},
   author={Meyering, J},
   howpublished = "\url{https://www.gnu.org/software/coreutils/coreutils.html}",
 }
@@ -28,11 +27,11 @@
 	title={Working with the AppInit\_DLLs registry value},
 	year="2006",
 	month="November",
-	note="Article ID: 197571",
+	note="Microsoft KB Article ID: 197571",
 }
 
 @manual{macos,
-	title={\texttt{DYLD(1)} the dynamic link editor},
+	title={\texttt{dyld(1)} Mac OS X Manual Page},
 	year="2009",
 	month="December",
 }
