--- a/paper/paper.tex
+++ b/paper/paper.tex
@@ -5,7 +5,7 @@
 \usepackage{listings}
 \usepackage{color}
 \usepackage{graphics}
-\usepackage{hyperref}
+\usepackage[hidelinks]{hyperref}
 \usepackage{rotating}
 \definecolor{dkgreen}{rgb}{0,0.6,0}
 \definecolor{gray}{rgb}{0.5,0.5,0.5}
@@ -44,7 +44,7 @@
 
 \input{codegen}
 
-\section{Coreutils}
+\section{GNU Core Utilities}
 \input{coreutils}
 
 \section{\texttt{net-tools}}
@@ -58,9 +58,13 @@
 
 \section{Conclusion}
 
-\section*{Appendix}
-
 \bibliographystyle{unsrt}
 \bibliography{citations}
+
+\newpage
+\appendix
+\section*{Appendix}
+\input{coreutils_appendix}
+\input{nettools_appendix}
 
 \end{document}
