--- a/paper/paper.tex
+++ b/paper/paper.tex
@@ -32,6 +32,10 @@
 \setlength{\baselineskip}{18pt}
 \maketitle
 
+\begin{abstract}
+We used fuzz testing methods to investigate the robustness of various Linux applications. We developed a mechanism to intercept system and library calls and return an error return code to the calling application. We defined crashes as unintentional core dumps or hangs. Of the 90 applications tested, we encountered crashes in 18 (20.0 \%) for at least one of the 22 calls we tested. We investigated the source code for some of these crashes and provide analysis in this paper. 
+\end{abstract}
+
 \section{Introduction}
 \input{intro}
 
@@ -44,7 +48,7 @@
 
 \input{codegen}
 
-\section{GNU Core Utilities}
+\section{Command-line Utilities}
 \input{coreutils}
 
 \section{\texttt{net-tools}}
