--- a/paper/citations.bib
+++ b/paper/citations.bib
@@ -48,3 +48,13 @@
 	year="2000",
 	month="October",
 }
+
+@manual{glibman,
+	title={GLib 2.50.2 Reference Manaual},
+	year="2014",
+}
+
+@misc{glibsource,
+	title={GLib Source Code},
+	howpublished = "\url{https://github.com/GNOME/glib}"
+}
