--- a/paper/paper.tex
+++ b/paper/paper.tex
@@ -7,6 +7,7 @@
 \usepackage{graphics}
 \usepackage[hidelinks]{hyperref}
 \usepackage{rotating}
+\usepackage[final]{pdfpages}
 \definecolor{dkgreen}{rgb}{0,0.6,0}
 \definecolor{gray}{rgb}{0.5,0.5,0.5}
 \definecolor{mauve}{rgb}{0.58,0,0.82}
@@ -71,5 +72,6 @@ We used fuzz testing methods to investigate the robustness of various Linux appl
 \input{coreutils_appendix}
 \input{nettools_appendix}
 \input{other_gnu_appendix}
+\includepdf[scale=.8, angle=90, pagecommand=\section{Anecdote Examples}]{an.pdf}
 
 \end{document}
