--- a/paper/nettools_appendix.tex
+++ b/paper/nettools_appendix.tex
@@ -17,3 +17,6 @@
 +   }
     strcpy(pn->name, name);
 \end{lstlisting}
+
+\texttt{ifconfig/malloc}
+(Unable to get source for version of \texttt{ifconfig} running on Ubuntu)\\
