--- a/paper/coreutils.tex
+++ b/paper/coreutils.tex
@@ -1,63 +1,41 @@
 \subsection{GNU Core Utilities}
-The first and largest group of small utilities that we tested was from the GNU Core Utilities. As described by the Free Software Foundation, ``the GNU core utilities are the basic file, shell and text manipulation utilities of the GNU operating system." [?] These utilities were chosen because they represent some of the most commonly used applications on Linux systems. Of the 51 utilities that we tested, 12 (23.5\%) crashed for at least one call. Listing \ref{lst:coreutils} gives the list of the utilities tested, Listing \ref{lst:coreutils_wrappers} the calls tested, and Listing \ref{lst:coreutils_crashes} the utilities that crash with associated call(s).
-%The main group of applications that we tested was comprised of small command-line utilities. Most of these are from the GNU Core Utilities project. As described by the Free Software Foundation, ``the GNU core utilities are the basic file, shell and text manipulation utilities of the GNU operating system." [?] These utilities were chosen because they represent some of the most commonly used applications on Linux systems. In addition to the GNU core utilities we included some other common utilities that are not part of the project. Listing 4 displays the utilities that we tested. For each of these utilities, we tested using each the calls in Listing \ref{lst:coreutils_wrappers}.
+The GNU Core Utilities project (henceforth ``coreutils'') comprises over 100 programs (many of them reimplementations of the original utilities found in UNIX) which provide basic file, shell, and text manipulation. Importantly, these tools are ``expected to exist on every [GNU] operating system'', making them some of the most commonly used applications on Linux systems \cite{coreutils}. As such, the robustness of these programs is of great importance, as they will be used by many users on a variety of systems. They also make good candidates for automated testing via shell script because of their command line interfaces.
 
-%The GNU Core Utilities project (henceforth ``coreutils'') is comprised of over 100 programs (many of them reimplementations of the original utilities found in UNIX) which provide basic file, shell, and text manipulation. Per their documentation, these are tools which are ``expected to exist on every [GNU] operating system'' \cite{coreutils}. As such, the robustness of these programs is of great importance, as they will be used by many users on a variety of systems.
+We hypothesized that coreutils would yield very few crashes. Primarily, the project is extremely mature: in 2002, the GNU fileutils, textutils, and sh-utils projects merged into the GNU coreutils project, by which point all three projects already had a substantial development history. In the same vein, the binaries from the coreutils project are used in production environments all over the world, and therefore have encountered significantly more testing than many other open source projects. Additionally, these utilities in general comprise a relatively small number of files and lines of code, therefore we hypothesized that they would be easier to get correct compared to larger open source projects.
 
-%In order to assess the robustness of the coreutils programs when given error return values from a variety of calls, we selected 62 of the coreutils programs to test (listing \ref{lst:coreutils_progs}).
+\subsubsection{Results}
+In order to assess the robustness of coreutils when given error return values from a variety of calls, we selected 51 of the coreutils programs (listing \ref{lst:coreutils}) and tested them on the aforementioned 19 calls (listing \ref{lst:small_scale_wrappers}). For each wrapped call, all of the utilities were run 1000 times. Of the 51 utilities that we tested, 12 (23.5\%) crashed for at least one of the wrapped calls (listing \ref{lst:coreutils_crashes}). The crashes seen were isolated to the memory allocation calls \texttt{malloc}, \texttt{calloc}, and \texttt{realloc}. 
 
-\subsection{net-tools}
-The second group of small utilities that we tested was the net-tools suite. We tested 11 utilities and found that 5 (45.5 \%) crashed. Error return codes from \texttt{malloc} caused all crashes. Listing \ref{lst:nettools} shows the programs in the net-tools and Listing \ref{nettools_crashes} the crashes.
+Utilities which produced core dumps were analyzed via \texttt{gdb} in order to find the offending code. 
 
 % table:
-
 \iffalse
-cat ~/ReturnValueTester/test\_dir/utils.txt.bak | egrep -v '^#|^$' | cut -d "|" -f 1 | sort > utils_used.txt
+cat ~/ReturnValueTester/test\_dir/utils.txt.bak | egrep -v '^#|^$' | cut -d "|" -f 1 | uniq | sort > utils_used.txt
 ls -f -a -1 ~/Downloads/coreutils-8.25/src/*.c | rev | cut -d "/" -f 1 | rev | cut -d "." -f 1 | sort > coreutils.txt 
 comm utils_used.txt coreutils.txt -12 | column -c 80
 \fi
 
+% TODO: modify to be annotated with which calls crashed each utility
+%  > uniq test_dir/core_utils.txt | column -c  80 | expand
 \begin{minipage}{\linewidth}
 \begin{lstlisting}[label={lst:coreutils},caption={GNU Core Utilities tested}]
-base64          dirname         logname         sort            unexpand
-basename        du              ls              stat            uniq
-cat             echo            md5sum          stat            unlink
-chmod           expr            mkdir           sum             users
-cksum           factor          mktemp          touch           wc
-comm            fold            mv              tr              who
-cp              groups          nproc           true            whoami
-cut             head            printenv        truncate
-date            hostid          pwd             tsort
-df              id              seq             tty
-dircolors       link            shred           uname
+base64          dircolors       id              pwd             tsort
+basename        dirname         link            seq             tty
+cat             du              logname         shred           uname
+chmod           echo            ls              sort            unexpand
+cksum           expr            md5sum          stat            uniq
+comm            factor          mkdir           sum             unlink
+cp              fold            mktemp          touch           users
+cut             groups          mv              tr              wc
+date            head            nproc           true            who
+df              hostid          printenv        truncate        whoami
 \end{lstlisting}
 \end{minipage}
 
-
 % ls -f -a -1 ~/ReturnValueTester/wrappers/*_wrapper.c | rev | cut -d "/" -f 1 | rev | cut -d "_" -f 1 | uniq | column -c 80
 \begin{lstlisting}[label={lst:coreutils_crashes},caption={Crashes in GNU Core Utilities}]
-cp (calloc)				expr (malloc)					logname (malloc)		who (malloc)
-df (realloc)			factor (malloc/realloc)		mv (calloc)
-du (malloc/calloc)	hostid (malloc)				stat (malloc)
-expr (malloc)			id (malloc)						wc (malloc)
+cp (calloc)				factor (malloc/realloc)		mv (calloc)       whoami (malloc)
+df (realloc)			hostid (malloc)		    	stat (malloc)      
+du (malloc/calloc)	id (malloc)						wc (malloc)
+expr (malloc)			logname (malloc)				who (malloc)			
 \end{lstlisting}
-
-\begin{lstlisting}[label={lst:net-tools_crashes},caption={Crashes in net-tools}]
-dnsdomaniname (malloc)	ifconfig (malloc)	ipmaddr (malloc)	netstat (malloc)
-\end{lstlisting}
-
-\begin{lstlisting}[label={lst:other_crashes},caption={Crashes in Other Utilities}]
-finger (malloc)	ip (malloc)	make (close/open/read)	ssh (malloc)	w (malloc)
-\end{lstlisting}
-
-\begin{lstlisting}[label={lst:coreutils_wrappers},caption={Wrapped calls for testing Command-line Utilities}]
-calloc  creat   execv   fork    malloc  opendir pipe    pthread_create 	realloc
-close   execvp  fopen   fstat   mmap    open    poll    pthread_mutex	read    
-write
-\end{lstlisting}
-
-We hypothesized that utilities of this type would yield very few crashes. The justification for this is two-fold. Primarily, the project is extremely mature: in 2002, the GNU fileutils, textutils, and sh-utils projects merged into the GNU coreutils project, but each of those three projects had a substantial development history at that point in time. In the same vein, the binaries from the coreutils project are used in production all over the world, and therefore are more well-tested than other open source projects. Additionally, these utilities have relatively few lines of code and total calls and are therefore easier to get correct.
- %Furthermore, we hypothesized that the most common source of errors would be from the \texttt{malloc} family of calls.
-
-\subsection{Results}
-Our results suggest that the coreutils project is extremely robust to error values returned from the calls tested. Namely, we were able to achieve crashes in two of the programs, \texttt{du} and \texttt{hostid}. Both of these crashes came through intercepting calls to \texttt{malloc}. See listings \ref{lst:du/malloc} and \ref{lst:hostid/malloc}.
