--- a/paper/nettools.tex
+++ b/paper/nettools.tex
@@ -1,33 +1,12 @@
-\begin{itemize}
-\item \texttt{netstat/malloc}
-\begin{itemize}
-\item Return value from \texttt{malloc} not checked and then passed to \texttt{strcpy}
-\url{https://github.com/giftnuss/net-tools/blob/master/lib/inet.c#L213}
-\item e.g. \texttt{PROB = 0.3}, \texttt{SEED = 26886}
-\item Fix:
-\begin{lstlisting}
-    pn = (struct add	r *) malloc(sizeof(struct addr));
-+   if (pn == NULL) {
-+   	perror("netstat");
-+		return (-1);
-+   }
-    pn->addr = *sin;
-    pn->next = INET_nn;
-    pn->host = host;
-    pn->name = (char *) malloc(strlen(name) + 1);
-+   if (pn->name == NULL) {
-+   	perror("netstat");
-+		return (-1);
-+   }
-    strcpy(pn->name, name);
+\subsection{\texttt{net-tools}}
+The second group of small utilities that we tested was the net-tools suite. We tested 11 utilities and found that 5 (45.5 \%) crashed. Error return codes from \texttt{malloc} caused all crashes. Listing \ref{lst:net-tools} shows the programs in the net-tools and Listing \ref{lst:net-tools_crashes} the crashes.
 
+\begin{lstlisting}[label={lst:net-tools_crashes},caption={Crashes in net-tools}]
+dnsdomaniname (malloc)	ifconfig (malloc)	ipmaddr (malloc)	netstat (malloc)
 \end{lstlisting}
-\end{itemize}
 
-\item \texttt{ifconfig/malloc}
-\begin{itemize}
-\item (Unable to get source for version of \texttt{ifconfig} running on Ubuntu)\\
-\end{itemize}
-
-
-\end{itemize}
+\begin{lstlisting}[label={lst:net-tools},caption={Crashes in net-tools}]
+dnsdomainname   ifconfig        netstat         route
+domainname      ipmaddr         nisdomainname   ypdomainname
+hostname        mii-tool        rarp
+\end{lstlisting}
